@@ -163,7 +163,7 @@
     <div class="topnav">
         <div class="site-title">
             <img class="site-logo" src="https://cdn.jsdelivr.net/gh/brooklynruff/d@main/updater/images/logo.png" alt="logo">
-            <div>No Name Games - YouTube Player</div>
+            <div>No Name Games - Video Player</div>
         </div>
     </div>
 
