@@ -1549,7 +1549,7 @@
         "img": "bigtower.jpg"
     },
     "(UNMONITORED) YouTube": {
-        "url": "https://cdn.jsdelivr.net/gh/brooklynruff/d@main/other/tubesofyutes.html&html=1",
+        "url": "https://cdn.jsdelivr.net/gh/brooklynruff/d@main/other/tubeyou.html&html=1",
         "img": "youtube.jpg"
     }
   },
